--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "google-maps-react": "^2.0.6",
     "next": "14.1.3",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
     "react-qr-reader": "^3.0.0-beta-1"
