--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "google-maps-react": "^2.0.6",
     "next": "14.1.3",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
-    "react-dom": "^18",
-    "react-qr-reader": "^3.0.0-beta-1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
