--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.3",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-qr-reader": "^3.0.0-beta-1"
   },
   "devDependencies": {
     "@types/node": "^20",
