--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.3",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-qr-scanner": "^1.0.0-alpha.11"
   },
   "devDependencies": {
     "@types/node": "^20",
