--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "react-qr-scanner": "^1.0.0-alpha.11"
   },
   "devDependencies": {
