--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@types/react-datepicker": "^6.2.0",
+    "moment": "^2.30.1",
     "next": "14.1.3",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-qr-scanner": "^1.0.0-alpha.11"
