--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-datepicker": "^6.6.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
-    "react-qr-scanner": "^1.0.0-alpha.11"
+    "react-qr-scanner": "^1.0.0-alpha.11",
+    "socket.io-client": "^4.7.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
