--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "@types/react-datepicker": "^6.2.0",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "moment": "^2.30.1",
     "next": "14.1.3",
