--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.2",
     "moment": "^2.30.1",
     "next": "14.1.3",
+    "next-auth": "^4.24.7",
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
